@@ -14,6 +14,7 @@ AC_ISC_POSIX
 AM_PROG_CC_STDC
 AC_HEADER_STDC
 AC_ARG_PROGRAM
+AC_LIBTOOL_WIN32_DLL
 AM_PROG_LIBTOOL
 
 changequote(,)dnl
